libs/wingc/src/jsify/captures/snapshots/wingc__jsify__captures__tests__transitive_reference_via_inflight_class.snap
---
source: libs/wingc/src/jsify/captures/tests.rs
expression: "capture_ok(r#\"\n    bring cloud;\n\n    let b = new cloud.Bucket();\n\n\t\tinflight class MyInflightClass {\n      putInBucket() {\n        b.put(\"in\", \"bucket\");\n      }\n    }\n\n    test \"test\" {\n      let obj = new MyInflightClass();\n      obj.putInBucket();\n    }\n\t\t\"#)"
---
======================================================
Files:

inflight.$Closure1.js
------------------------------------------------------
module.exports = function({ $MyInflightClass, MyInflightClass }) {
  class $Closure1 {
    async handle()  {
      const obj = new $MyInflightClass();
      (await obj.putInBucket());
    }
    constructor({  }) {
      const $obj = (...args) => this.handle(...args);
      Object.setPrototypeOf($obj, this);
      return $obj;
    }
  }
  return $Closure1;
}

inflight.MyInflightClass.js
------------------------------------------------------
module.exports = function({ $b }) {
  class MyInflightClass {
    async putInBucket()  {
      (await $b.put("in","bucket"));
    }
  }
  return MyInflightClass;
}

preflight.js
------------------------------------------------------
const cloud = require('@winglang/sdk').cloud;
class MyInflightClass extends $stdlib.std.Resource {
  constructor(scope, id, ) {
    super(scope, id);
    this._addInflightOps("putInBucket");
  }
  static _toInflightType(context) {
    return $stdlib.core.NodeJsCode.fromInline(`
      require("./inflight.MyInflightClass.js")({ 
        $b: ${context._lift(b)},
      })
    `);
  }
  _toInflight() {
    return $stdlib.core.NodeJsCode.fromInline(`
      (await (async () => {
        const client = new (${MyInflightClass._toInflightType(this).text})({
        });
        if (client.$inflight_init) { await client.$inflight_init(); }
        return client;
      })())
    `);
  }
  _registerBind(host, ops) {
    if (ops.includes("putInBucket")) {
      MyInflightClass._registerBindObject(b, host, ["put"]);
    }
    super._registerBind(host, ops);
  }
}
class $Closure1 extends $stdlib.std.Resource {
  constructor(scope, id, ) {
    super(scope, id);
    this._addInflightOps("handle");
    this.display.hidden = true;
  }
  static _toInflightType(context) {
    return $stdlib.core.NodeJsCode.fromInline(`
      require("./inflight.$Closure1.js")({ 
        $MyInflightClass: ${context._lift(MyInflightClass)},
      })
    `);
  }
  _toInflight() {
    return $stdlib.core.NodeJsCode.fromInline(`
      (await (async () => {
        const client = new (${$Closure1._toInflightType(this).text})({
        });
        if (client.$inflight_init) { await client.$inflight_init(); }
        return client;
      })())
    `);
  }
  _registerBind(host, ops) {
    if (ops.includes("handle")) {
      $Closure1._registerBindObject(MyInflightClass, host, []);
    }
    super._registerBind(host, ops);
  }
}
const b = this.node.root.newAbstract("@winglang/sdk.cloud.Bucket",this,"cloud.Bucket");
this.node.root.new("@winglang/sdk.std.Test",std.Test,this,"test:test",new $Closure1(this,"$Closure1"));

