libs/wingc/src/jsify/captures/snapshots/wingc__jsify__captures__tests__transitive_reference_via_static.snap
---
source: libs/wingc/src/jsify/captures/tests.rs
expression: "capture_ok(r#\"\n    bring cloud;\n\n    let b = new cloud.Bucket();\n    \n\t\tclass MyType {\n      static inflight putInBucket() {\n        b.put(\"in\", \"bucket\");\n      }\n    }\n\n    class YourType {\n      inflight putIndirect() {\n        MyType.putInBucket();\n      }\n    }\n\n    let t = new YourType();\n    test \"test\" {\n      t.putIndirect();\n    }\n\t\t\"#)"
---
======================================================
Captured by MyType:
Variables:
  putInBucket():
    b => [put()]

======================================================
Captured by YourType:
Types:
  MyType = MyType

======================================================
Captured by $Closure1:
Variables:
  handle():
    t => [putIndirect()]

======================================================
Files:

inflight.YourType.js
------------------------------------------------------
module.exports = function({ MyType }) {
  class YourType {
    constructor({  }) {
    }
    async putIndirect()  {
      (await MyType.putInBucket());
    }
    async $inflight_init()  {
    }
  }
  return YourType;
}

inflight.$Closure1.js
------------------------------------------------------
module.exports = function({ t }) {
  class $Closure1 {
    constructor({  }) {
      const $obj = (...args) => this.handle(...args);
      Object.setPrototypeOf($obj, this);
      return $obj;
    }
    async handle()  {
      (await t.putIndirect());
    }
    async $inflight_init()  {
    }
  }
  return $Closure1;
}

main.w
------------------------------------------------------

    bring cloud;

    let b = new cloud.Bucket();
    
    class MyType {
      static inflight putInBucket() {
        b.put("in", "bucket");
      }
    }

    class YourType {
      inflight putIndirect() {
        MyType.putInBucket();
      }
    }

    let t = new YourType();
    test "test" {
      t.putIndirect();
    }
    
preflight.js
------------------------------------------------------
const cloud = require('@winglang/sdk').cloud;
class MyType extends $stdlib.std.Resource {
  constructor(scope, id, ) {
    super(scope, id);
    this._addInflightOps("putInBucket", "$inflight_init");
  }
  static _toInflightType(context) {
    return $stdlib.core.NodeJsCode.fromInline(`
      require("./inflight.MyType.js")({
        b: ${context._lift(b, ["put()"])},
      })
    `);
  }
  _toInflight() {
    return $stdlib.core.NodeJsCode.fromInline(`
      (await (async () => {
        const MyTypeClient = ${MyType._toInflightType(this).text};
        const client = new MyTypeClient({
        });
        if (client.$inflight_init) { await client.$inflight_init(); }
        return client;
      })())
    `);
  }
  _registerBind(host, ops) {
    if (ops.includes("$inflight_init")) {
      MyType._registerBindObject(b, host, ["put()"]);
    }
    super._registerBind(host, ops);
  }
  static _registerTypeBind(host, ops) {
    if (ops.includes("putInBucket")) {
      MyType._registerBindObject(b, host, ["put()"]);
    }
    super._registerTypeBind(host, ops);
  }
}
class YourType extends $stdlib.std.Resource {
  constructor(scope, id, ) {
    super(scope, id);
    this._addInflightOps("putIndirect", "$inflight_init");
  }
  static _toInflightType(context) {
    return $stdlib.core.NodeJsCode.fromInline(`
      require("./inflight.YourType.js")({
        MyType: MyType._toInflightType(context);
      })
    `);
  }
  _toInflight() {
    return $stdlib.core.NodeJsCode.fromInline(`
      (await (async () => {
        const YourTypeClient = ${YourType._toInflightType(this).text};
        const client = new YourTypeClient({
        });
        if (client.$inflight_init) { await client.$inflight_init(); }
        return client;
      })())
    `);
  }
}
class $Closure1 extends $stdlib.std.Resource {
  constructor(scope, id, ) {
    super(scope, id);
    this._addInflightOps("handle", "$inflight_init");
    this.display.hidden = true;
  }
  static _toInflightType(context) {
    return $stdlib.core.NodeJsCode.fromInline(`
      require("./inflight.$Closure1.js")({
        t: ${context._lift(t, ["putIndirect()"])},
      })
    `);
  }
  _toInflight() {
    return $stdlib.core.NodeJsCode.fromInline(`
      (await (async () => {
        const $Closure1Client = ${$Closure1._toInflightType(this).text};
        const client = new $Closure1Client({
        });
        if (client.$inflight_init) { await client.$inflight_init(); }
        return client;
      })())
    `);
  }
  _registerBind(host, ops) {
    if (ops.includes("$inflight_init")) {
      $Closure1._registerBindObject(t, host, ["putIndirect()"]);
    }
    if (ops.includes("handle")) {
      $Closure1._registerBindObject(t, host, ["putIndirect()"]);
    }
    super._registerBind(host, ops);
  }
}
const b = this.node.root.newAbstract("@winglang/sdk.cloud.Bucket",this,"cloud.Bucket");
const t = new YourType(this,"YourType");
this.node.root.new("@winglang/sdk.std.Test",std.Test,this,"test:test",new $Closure1(this,"$Closure1"));

inflight.MyType.js
------------------------------------------------------
module.exports = function({ b }) {
  class MyType {
    constructor({  }) {
    }
    static async putInBucket()  {
      (await b.put("in","bucket"));
    }
    async $inflight_init()  {
    }
  }
  return MyType;
}

